Process the double-click event triggered by successive middle buttons

BUG: 280332
FIXED-IN: 4.9.0